Advance in french language

--- a/ac-front-end/public/locales/en/translation.json
+++ b/ac-front-end/public/locales/en/translation.json
@@ -8,6 +8,7 @@
   "textBigSize": "Big",
   "englishLanguage": "English (Default)",
   "spanishLanguage": "Spanish",
+  "frenchLanguage": "French",
   "darkTheme": "Dark Mode (Default)",
   "lightTheme": "Light Mode",
   "darkProtanopiaTheme": "Dark Mode (Protanopia)",
