--- a/ac-front-end/public/locales/en/translation.json
+++ b/ac-front-end/public/locales/en/translation.json
@@ -69,5 +69,15 @@
   "utClient": "Client",
 
   "__menu_-": "----------Menu Interface----------",
-  "welcomeText": "Welcome back"
+  "welcomeText": "Welcome back",
+
+  "__tutorials__": "----------Tutorials Interface----------",
+  "systemHelp": "System Help",
+  "cardBlocking": "Card Blocking",
+  "cardCancellation": "Card Cancellation",
+  "cardRejected": "Card Rejected",
+  "reportUnrecognizedCharges": "Report Unrecognized Charges",
+  "requestNewPlastic": "Request New Plastic",
+  "requestThirdPartyServices": "Request Third Party Services",
+  "selectBestVideos": "Select Best Videos"
 }
