--- a/ac-front-end/public/locales/fr/traslation.json
+++ b/ac-front-end/public/locales/fr/traslation.json
@@ -1,74 +1,83 @@
 {
-    "__settingsInterface__": "----------Settings Interface----------",
-    "textSize": "Tamaño de texto",
-    "theme": "Tema",
-    "language": "Idioma",
-    "textMediumSize": "Mediano (Predeterminado)",
-    "textSmallSize": "Pequeño",
-    "textBigSize": "Grande",
-    "englishLanguage": "Inglés (Predeterminado)",
-    "spanishLanguage": "Español",
-    "frenchLanguage": "Français",
-    "darkTheme": "Modo Oscuro (Predeterminado)",
-    "lightTheme": "Modo Claro",
-    "darkProtanopiaTheme": "Modo Oscuro (Protanopia)",
-    "darkDeuteranopiaTheme": "Modo Oscuro (Deuteranopia)",
-    "darkTritanopiaTheme": "Modo Oscuro (Tritanopia)",
-    "darkProtanomalyTheme": "Modo Oscuro (Protanomaly)",
-    "darkDeuteranomalyTheme": "Modo Oscuro (Deuteranomaly)",
-    "darkTritanomalyTheme": "Modo Oscuro (Tritanomaly)",
-  
-    "__loginForm__": "----------Login Interface----------",
-    "signIn": "Se connecter",
-    "password": "Mot de passe",
-    "fyp": "Vous avez oublié votre mot de passe?",
-    "signInBtn": "Se connecter",
-  
-    "__recoverPassword__": "----------Recover Password Interface----------",
-    "changePassword": "Récupérer le mot de passe",
-    "rpEmail": "Adresse e-mail",
-    "recoverPasswordBtn": "Continuer",
-    "token": "Jeton de confirmation",
-  
-    "__newPassword__": "----------New Password Interface----------",
-    "setNewPassword": "Créer un nouveau mot de passe",
-    "newPassword": "Nouveau mot de passe",
-    "setNewPasswordBtn": "Enregistrer le nouveau mot de passe",
-    "confirmNewPassword": "Confirmer le mot de passe",
-  
-    "__agentList__": "----------Agent List Interface----------",
-    "activeCalls": "Appels actifs",
-    "main": "Menu",
-    "settings": "Configuration",
-    "filter": "Filtre",
-    "date": "Jour",
-    "tag": "Étiquette",
-    "status": "État",
-    "alwayShow": "Toujours montrer",
-    "allAgents": "Tous les acteurs",
-    "nameAgent": "L'agent Jim Halpert",
-  
-    "__recordings__": "----------Recordings Interface----------",
-    "about": "Acerca de",
-    "feedback": "Retroalimentación",
-    "duration": "Duración:",
-    "agent": "Agente:",
-    "client": "Cliente:",
-    "clientsProblem": "Problema del cliente:",
-    "lostCard": "Tarjeta perdida",
-    "thirdPartyService": "Servicio de terceros:",
-    "clientsFeedback": "Opinión del cliente:",
-    "yourFeedback": "Tu opinión:",
-    "noFeedback": "No se han enviado comentarios",
-    "qaFeedback": "Comentarios del QA",
-    "search": "Buscar",
-  
-    "__userType__": "----------User Type Interface----------",
-    "selectUserType": "Sseleccionar tipo de usuario:",
-    "utAgent": "Agente",
-    "utClient": "Cliente",
-  
-    "__menu_-": "----------Menu Interface----------",
-    "welcomeText": "Bienvenue sur"
-  }
-  
+  "__settingsInterface__": "----------Settings Interface----------",
+  "textSize": "Tamaño de texto",
+  "theme": "Tema",
+  "language": "Idioma",
+  "textMediumSize": "Mediano (Predeterminado)",
+  "textSmallSize": "Pequeño",
+  "textBigSize": "Grande",
+  "englishLanguage": "Inglés (Predeterminado)",
+  "spanishLanguage": "Español",
+  "frenchLanguage": "Français",
+  "darkTheme": "Modo Oscuro (Predeterminado)",
+  "lightTheme": "Modo Claro",
+  "darkProtanopiaTheme": "Modo Oscuro (Protanopia)",
+  "darkDeuteranopiaTheme": "Modo Oscuro (Deuteranopia)",
+  "darkTritanopiaTheme": "Modo Oscuro (Tritanopia)",
+  "darkProtanomalyTheme": "Modo Oscuro (Protanomaly)",
+  "darkDeuteranomalyTheme": "Modo Oscuro (Deuteranomaly)",
+  "darkTritanomalyTheme": "Modo Oscuro (Tritanomaly)",
+
+  "__loginForm__": "----------Login Interface----------",
+  "signIn": "Se connecter",
+  "password": "Mot de passe",
+  "fyp": "Vous avez oublié votre mot de passe?",
+  "signInBtn": "Se connecter",
+
+  "__recoverPassword__": "----------Recover Password Interface----------",
+  "changePassword": "Récupérer le mot de passe",
+  "rpEmail": "Adresse e-mail",
+  "recoverPasswordBtn": "Continuer",
+  "token": "Jeton de confirmation",
+
+  "__newPassword__": "----------New Password Interface----------",
+  "setNewPassword": "Créer un nouveau mot de passe",
+  "newPassword": "Nouveau mot de passe",
+  "setNewPasswordBtn": "Enregistrer le nouveau mot de passe",
+  "confirmNewPassword": "Confirmer le mot de passe",
+
+  "__agentList__": "----------Agent List Interface----------",
+  "activeCalls": "Appels actifs",
+  "main": "Menu",
+  "settings": "Configuration",
+  "filter": "Filtre",
+  "date": "Jour",
+  "tag": "Étiquette",
+  "status": "État",
+  "alwayShow": "Toujours montrer",
+  "allAgents": "Tous les acteurs",
+  "nameAgent": "L'agent Jim Halpert",
+
+  "__recordings__": "----------Recordings Interface----------",
+  "about": "À propos de",
+  "feedback": "Commentaires",
+  "duration": "Durée:",
+  "agent": "Agent:",
+  "client": "Client:",
+  "clientsProblem": "Problème de client:",
+  "lostCard": "Carte perdue",
+  "thirdPartyService": "Service tiers:",
+  "clientsFeedback": "Commentaires des clients:",
+  "yourFeedback": "Votre avis:",
+  "noFeedback": "Aucun commentaire n'a été envoyé",
+  "qaFeedback": "Commentaires de l'AQ",
+  "search": "Recherche",
+
+  "__userType__": "----------User Type Interface----------",
+  "selectUserType": "Sélectionnez le type d'utilisateur:",
+  "utAgent": "Agent",
+  "utClient": "Client",
+
+  "__menu_-": "----------Menu Interface----------",
+  "welcomeText": "Bienvenue sur",
+
+  "__tutorials__": "----------Tutorials Interface----------",
+  "systemHelp": "Aide Système",
+  "cardBlocking": "Blocage des Cartes",
+  "cardCancellation": "Annulation de la Carte",
+  "cardRejected": "Carte Rejetée",
+  "reportUnrecognizedCharges": "Déclarer les Charges Non Comptabilisées",
+  "requestNewPlastic": "Demander un Nouveau Plastique",
+  "requestThirdPartyServices": "Demander des Services à des Tiers",
+  "selectBestVideos": "Sélectionnez les Meilleures Vidéos"
+}
