--- a/ac-front-end/public/locales/es/translation.json
+++ b/ac-front-end/public/locales/es/translation.json
@@ -8,7 +8,7 @@
   "textBigSize": "Grande",
   "englishLanguage": "Inglés (Predeterminado)",
   "spanishLanguage": "Español",
-  "frenchLanfuage": "Francés",
+  "frenchLanguage": "Francés",
   "darkTheme": "Modo Oscuro (Predeterminado)",
   "lightTheme": "Modo Claro",
   "darkProtanopiaTheme": "Modo Oscuro (Protanopia)",
