Progress in tutorials interface

--- a/ac-front-end/public/locales/en/translation.json
+++ b/ac-front-end/public/locales/en/translation.json
@@ -79,5 +79,8 @@
   "reportUnrecognizedCharges": "Report Unrecognized Charges",
   "requestNewPlastic": "Request New Plastic",
   "requestThirdPartyServices": "Request Third Party Services",
-  "selectBestVideos": "Select Best Videos"
+  "selectBestVideos": "Select Best Videos",
+
+  "__thirdPartyServices__": "----------Third Party Services Interface----------",
+  "thirdPartyServices": "Third Party Services"
 }
