--- a/ac-front-end/public/locales/fr/translation.json
+++ b/ac-front-end/public/locales/fr/translation.json
@@ -1,22 +1,22 @@
 {
   "__settingsInterface__": "----------Settings Interface----------",
-  "textSize": "Tamaño de texto",
-  "theme": "Tema",
-  "language": "Idioma",
-  "textMediumSize": "Mediano (Predeterminado)",
-  "textSmallSize": "Pequeño",
-  "textBigSize": "Grande",
-  "englishLanguage": "Inglés (Predeterminado)",
-  "spanishLanguage": "Español",
+  "textSize": "Taille du texte",
+  "theme": "Sujet",
+  "language": "Langage",
+  "textMediumSize": "Moyen (par défaut)",
+  "textSmallSize": "Court",
+  "textBigSize": "Grand",
+  "englishLanguage": "Anglais (par défaut)",
+  "spanishLanguage": "Espagnol",
   "frenchLanguage": "Français",
-  "darkTheme": "Modo Oscuro (Predeterminado)",
-  "lightTheme": "Modo Claro",
-  "darkProtanopiaTheme": "Modo Oscuro (Protanopia)",
-  "darkDeuteranopiaTheme": "Modo Oscuro (Deuteranopia)",
-  "darkTritanopiaTheme": "Modo Oscuro (Tritanopia)",
-  "darkProtanomalyTheme": "Modo Oscuro (Protanomaly)",
-  "darkDeuteranomalyTheme": "Modo Oscuro (Deuteranomaly)",
-  "darkTritanomalyTheme": "Modo Oscuro (Tritanomaly)",
+  "darkTheme": "Mode sombre (par défaut)",
+  "lightTheme": "Mode lumière",
+  "darkProtanopiaTheme": "Mode sombre (Protanopie)",
+  "darkDeuteranopiaTheme": "Mode sombre (Deutéranopie)",
+  "darkTritanopiaTheme": "Mode sombre (Tritanopie)",
+  "darkProtanomalyTheme": "Mode sombre (Protanomalie)",
+  "darkDeuteranomalyTheme": "Mode sombre (Deutéranomalie)",
+  "darkTritanomalyTheme": "Mode sombre (Tritanomalie)",
 
   "__loginForm__": "----------Login Interface----------",
   "signIn": "Se connecter",
