--- a/ac-front-end/public/locales/en/translation.json
+++ b/ac-front-end/public/locales/en/translation.json
@@ -141,12 +141,13 @@
   "investments": "Investments",
 
   "__Alerts__": "----------------Alert texts in interfaces--------------",
+  "validEmailPwd": "Must be a valid email and password",
   "failedLoginEmail": "User not found",
   "failedLoginPassword": "Incorrect password",
   "confirmPassword": "Token sent to reset password",
   "validateEmail": "Enter a valid email",
   "invalidToken": "Invalid token",
   "changePasswordSuccessful": "Password changed",
-  "differentPasswords": "Las contraseñas no coinciden"
+  "differentPasswords": "Passwords do not match"
 
 }
