Login interfaces and json translations commented

--- a/ac-front-end/public/locales/es/translation.json
+++ b/ac-front-end/public/locales/es/translation.json
@@ -1,4 +1,11 @@
 {
+  "__File__": "Spanish translations",
+  "__Authors__": "A01749448 Jorge Chávez Badillo A01750185 Amy Murakami Tsutsumi A01749373 Ariadna Jocelyn Guzman Jiménez",
+  "__Start Date__": "2022-05-12",
+  "__Ending Date__": "2022-06-",
+
+
+
   "__settingsInterface__": "----------Settings Interface----------",
   "textSize": "Tamaño de texto",
   "theme": "Tema",
