--- a/ac-front-end/public/locales/es/translation.json
+++ b/ac-front-end/public/locales/es/translation.json
@@ -4,8 +4,6 @@
   "__Start Date__": "2022-05-12",
   "__Ending Date__": "2022-06-",
 
-
-
   "__settingsInterface__": "----------Settings Interface----------",
   "textSize": "Tamaño de texto",
   "theme": "Tema",
@@ -76,7 +74,7 @@
   "startCall": "Empezar llamada:",
   "endCall": "Terminar llamada:",
   "analysis": "Análisis",
-  "agentInterrputions": "Interrupciones de agentes:",
+  "agentInterruptions": "Interrupciones de agentes:",
   "userInterruptions": "Interrupciones del usuario:",
   "agentSentiment": "Sentimiento general del agente:",
   "userSentiment": "Sentimiento general del usuario:",
@@ -165,5 +163,4 @@
   "mixed": "Mixto",
   "neutral": "Neutro",
   "negative": "Negativo"
-
 }
